fixes large screen size of jump to links

--- a/app/styles/partials/jump-to.scss
+++ b/app/styles/partials/jump-to.scss
@@ -30,4 +30,8 @@
       margin: 0;
     }
   }
+  @media (min-width: $screen-lg-min) {
+    padding-right: 60px;
+    padding-left: 60px;
+  }
 }
